cabal-version:      3.0
name:               plutarch-unit
version:            1.3.0
synopsis:           Unit checks for Plutarch
description:
  An independent unitcheck library for constructing unit checks for Plutarch.

homepage:           https://github.com/Liqwid-Labs/plutarch-unit
bug-reports:        https://github.com/Liqwid-Labs/plutarch-unit/issues
author:             Seungheon Oh
maintainer:         Seungheon Oh <seungheon.ooh@gmail.com>
copyright:          (C) 2022 Liqwid Labs
category:           Plutarch
build-type:         Simple
tested-with:        GHC ==9.2.3
extra-source-files: README.md

-- LICENSE
source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/plutrach-unit

-- Flags

flag development
  description: Disable -Werror during development mode
  default:     False
  manual:      True

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wno-partial-type-signatures

  if !flag(development)
    ghc-options: -Werror

  build-depends:
    , base      ^>=4.16

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    NoFieldSelectors

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Plutarch.Test.Program

  other-modules:
    Plutarch.Test.Eval

  build-depends:
    , optics-core
    , optics-th
    , tagged
    , tasty
    , text
    , plutus-core

  hs-source-dirs:  src
