cabal-version:      3.0
name:               plutus-context-builder
version:            2.11.0
synopsis:           A builder for ScriptContexts
description:
  Defines a builder for ScriptContexts, with helpers for commonly-needed uses.

homepage:           https://github.com/Liqwid-Labs/plutarch-context-builder
bug-reports:
  https://github.com/Liqwid-Labs/plutarch-context-builder/issues

license:

-- license-file:       LICENSE
author:             Koz Ross, Seungheon Oh
maintainer:
  Koz Ross <koz@mlabs.city>, Seungheon Oh <seungheon.ooh@gmail.com>

copyright:          (C) 2022 Liqwid Labs
category:           Plutarch
build-type:         Simple
tested-with:        GHC ==9.2.5
extra-source-files: README.md

-- LICENSE
source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/plutarch-context-builder

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror

  build-depends:
    , base      ^>=4.16

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    NoFieldSelectors

  default-language:   Haskell2010

common common-tests
  import:        common-lang
  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , plutus-context-builder
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , tasty
    , tasty-hunit

-- Libraries

library
  import:          common-lang
  exposed-modules: Plutus.ContextBuilder
  other-modules:
    Plutus.ContextBuilder.Base
    Plutus.ContextBuilder.Certifying
    Plutus.ContextBuilder.Check
    Plutus.ContextBuilder.Internal
    Plutus.ContextBuilder.Minting
    Plutus.ContextBuilder.Rewarding
    Plutus.ContextBuilder.Spending
    Plutus.ContextBuilder.SubBuilder
    Plutus.ContextBuilder.TxInfo

  build-depends:
    , acc
    , bytestring
    , contravariant
    , cryptonite
    , memory
    , optics
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , serialise

  hs-source-dirs:  src

-- Tests

test-suite sample
  import:         common-tests
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    MintingBuilder
    SpendingBuilder

  build-depends:  optics
  hs-source-dirs: sample/
